# mod_array

./: CMakeLists.txt  README.md
tests/: array_test0.cpp
